--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,8 @@ parameters:
 
 services:
     # default configuration for services in *this* file
+    Symfony\Component\PasswordHasher\Hasher\UserPasswordHasher:
+        class: Symfony\Component\PasswordHasher\Hasher\UserPasswordHasher
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
