--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
             provider: app_user_provider # Use the defined provider above
             logout:
                 path: app_logout # Route to handle logout
-                target: app_client_home # Route to redirect to after logout, adjusted to your homepage route name
+                target: app_login # Route to redirect to after logout, adjusted to your homepage route name
             form_login: # Form login authentication
                 login_path: app_login # Route name for the login page
                 check_path: app_login # Route name for submitting the login form
@@ -38,6 +38,7 @@ security:
                 always_remember_me: true
 
    # access_control:
-       # - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allow access to login page without being authenticated
-        #- { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allow access to register page without being authenticated
-       # - { path: ^/dashboard, roles: admin } # Adjusted for your admin access path and role
+       # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allow access to login page without being authenticated
+       # - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allow access to register page without being authenticated
+        #- { path: ^/dashboard/, roles: admin } # Adjusted for your admin access path and role
+       # - { path: ^/home/blog, roles: user } 
