--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,13 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
    article_images_directory: '%kernel.project_dir%/public/images/blog'
+   profile_images_directory: '%kernel.project_dir%/public/images'
 services:
+    App\EventSubscriber\PhoneNumberValidationSubscriber:
+        arguments:
+            $validator: '@validator'
+        tags:
+            - { name: kernel.event_subscriber }
     # default configuration for services in *this* file
     Symfony\Component\PasswordHasher\Hasher\UserPasswordHasher:
         class: Symfony\Component\PasswordHasher\Hasher\UserPasswordHasher
