--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,11 @@ parameters:
    article_images_directory: '%kernel.project_dir%/public/images/blog'
    profile_images_directory: '%kernel.project_dir%/public/images'
 services:
+    App\Service\TwilioClient:
+        arguments:
+            $sid: '%env(TWILIO_SID)%'
+            $token: '%env(TWILIO_TOKEN)%'
+            $from: '%env(TWILIO_FROM)%'
     App\EventSubscriber\PhoneNumberValidationSubscriber:
         arguments:
             $validator: '@validator'
