--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.18.0",
+        "google/recaptcha": "*",
+        
         "knplabs/knp-paginator-bundle": "^5.9",
+        "knpuniversity/oauth2-client-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "sensio/framework-extra-bundle": "^6.2",
