--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+quiz_submit:
+    path: /quiz/submit
+    controller: App\Controller\QuizController::submitQuiz
+    methods: [POST] 
