--- a/.env
+++ b/.env
@@ -43,6 +43,14 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
 ###< symfony/twilio-notifier ###
 
+
+# Twilio raslen
+TWILIO_ACCOUNT_SID=AC16f879264a2d9d8202b220107b018a86
+TWILIO_AUTH_TOKEN=a28378490e22fa953a520a5ebf98f4b2
+TWILIO_FROM_NUMBER=+18782039372
+TWILIO_TO_NUMBER=+21629775523
+# Twilio wajdi
+
 TWILIO_SID=ACe92c3d66e8ce233e9203acbe50492a5c
 TWILIO_TOKEN=00ef7cf39edd636803c62c698fcb19c2
 TWILIO_FROM=+12706551982
@@ -58,3 +66,10 @@ WKHTMLTOPDF_PATH='"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe"'
 #sayf////////////
 API_KEY=sk-proj-kdojE2LEDbWi0Mti3tI4T3BlbkFJnoK1Ms85Ix0LX5mVoCnY
 WKHTMLTOPDF_PATH='"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe"'
+
+###> knplabs/knp-snappy-bundle  Raslen###
+
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_BINARY="C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe"
+WKHTMLTOIMAGE_BINARY="C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe"
