--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,7 +11,12 @@ parameters:
    uploads.directory: '%kernel.project_dir%/public/uploads'
    discord.webhook_url: '%env(DISCORD_WEBHOOK_URL)%'  
    images_directory: '%kernel.project_dir%/public/uploads'
-   
+   twilio.account_sid: '%env(TWILIO_ACCOUNT_SID)%'
+   twilio.auth_token: '%env(TWILIO_AUTH_TOKEN)%'
+   twilio.number: '%env(TWILIO_FROM_NUMBER)%'
+   twilio.to_number: '%env(TWILIO_TO_NUMBER)%'
+
+
 services:
     ReCaptcha\ReCaptcha:
         arguments:
@@ -27,6 +32,18 @@ services:
             $validator: '@validator'
         tags:
             - { name: kernel.event_subscriber }
+
+
+    Twilio\Rest\Client:
+        arguments:
+            $username: '%env(TWILIO_ACCOUNT_SID)%'
+            $password: '%env(TWILIO_AUTH_TOKEN)%'
+
+    App\Controller\SolutionController:
+        arguments:
+            $twilioClient: '@Twilio\Rest\Client'
+            $logger: '@logger'
+
     # default configuration for services in *this* file
     Symfony\Component\PasswordHasher\Hasher\UserPasswordHasher:
         class: Symfony\Component\PasswordHasher\Hasher\UserPasswordHasher
@@ -36,10 +53,11 @@ services:
          bind:
             $stripeSK: '%env(STRIPE_SK)%' # Ensures that $stripeSK can be autowired with the Stripe key
               # Knp\Snappy\Pdf service configuration
+    
     Knp\Snappy\Pdf:
         arguments:
             $binary: '%env(WKHTMLTOPDF_PATH)%' # Make sure this environment variable is defined in your .env file
-            $options: { 'no-outline': true, 'encoding': 'UTF-8' }
+           
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
