--- a/.env
+++ b/.env
@@ -25,6 +25,10 @@ APP_SECRET=f46b2e201341dc1b24f4ae7e1b11bd36
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/arto"
+#DATABASE_URL="mysql://boucha-boucha:123@192.168.43.124:3306/arto"
+
+#DATABASE_URL="mysql://boucha-boucha:123@127.0.0.1:3306/arto"
+
  #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
