--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.18.0",
-        "endroid/qr-code-bundle": "*",
+        "endroid/qr-code-bundle": "^5.0",
         "google/recaptcha": "*",
         "knplabs/knp-paginator-bundle": "^5.9",
         "knplabs/knp-snappy-bundle": "^1.10",
